[package]
name = "day14"
version = "0.1.0"
edition = "2021"

[dependencies]
algos = { version = "0.1.0", path = "../algos" }
solver = { version = "0.1.0", path = "../solver" }

[build-dependencies]
cargo-manifest = "0.17.0"
chrono = "0.4.38"
reqwest = { version = "0.12.9", features = ["blocking"] }
